Removed usage to IOUtils.toString (#8579)
Specifically the toString reading from inputstream.